tests/NormalTests/paczka1/fuzzy1/45653964.err
Error in line 9: A989 S356 43,3
Error in line 10: wJPtwy S935 77,0
Error in line 2: 4tksxCRT S797 29,7
Error in line 21: 4tksxCRT A989 70,8
Error in line 24: kOl0qZ2Eu A989 49,4
Error in line 25: 8kq S356 55,1
Error in line 26: kOl0qZ2Eu S797 68,7
Error in line 29: ETgL A989 201,1
